syntax = "proto3";

package mpb;

option go_package = "./mpb";

message CReqAdminLoginByPassword {
    string account = 1;
    string password = 2;
}

message CResAdminLoginByPassword {
    string token = 1;
}

message CReqAdminRecoverEnergy {
    uint64 user_id = 1;
}

message CReqAdminFreezeAccountTrade {
    uint64 user_id = 1;
}